# ur5_collision_avoidance

./: .gitignore  README.md  notes.txt  test.py
catkin_ws/mover/: CMakeLists.txt
catkin_ws/mover/src/: mover.py
catkin_ws/src/: .gitmodules
catkin_ws/src/cluster/: CMakeLists.txt  package.xml
catkin_ws/src/cluster/src/: cluster2obj.py  clusterAutomater.py  clusterViz.py  cluster_extraction.cpp  hyperParameterExplore.py  projectViz.py  settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/: outputCCMinMaxKTree.txt
catkin_ws/src/cluster/src/distanceRemoval/cluster100minMax10_90ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster100minMax10_90ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster100minMax1_99ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster100minMax1_99ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster100minMax5_95ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster100minMax5_95ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster2000minMax10_90ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster2000minMax10_90ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster2000minMax1_99ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster2000minMax1_99ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster2000minMax5_95ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster2000minMax5_95ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster200minMax10_90ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster200minMax10_90ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster200minMax1_99ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster200minMax1_99ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster200minMax5_95ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster200minMax5_95ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster500minMax10_90ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster500minMax10_90ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster500minMax1_99ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster500minMax1_99ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster500minMax5_95ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/distanceRemoval/cluster500minMax5_95ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/: outputCCMinMaxKTree.txt
catkin_ws/src/cluster/src/noDistanceRemoval/cluster100minMax10_90ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster100minMax10_90ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster100minMax1_99ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster100minMax1_99ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster100minMax5_95ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster100minMax5_95ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster2000minMax10_90ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster2000minMax10_90ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster2000minMax1_99ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster2000minMax1_99ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster2000minMax5_95ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster2000minMax5_95ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster200minMax10_90ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster200minMax10_90ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster200minMax1_99ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster200minMax1_99ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster200minMax5_95ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster200minMax5_95ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster500minMax10_90ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster500minMax10_90ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster500minMax1_99ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster500minMax1_99ktreeTrue/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster500minMax5_95ktreeFalse/: settings.yaml
catkin_ws/src/cluster/src/noDistanceRemoval/cluster500minMax5_95ktreeTrue/: settings.yaml
catkin_ws/src/helper/: CMakeLists.txt  package.xml
catkin_ws/src/mover/: CMakeLists.txt  package.xml
catkin_ws/src/mover/src/: getCalibrationPositions.py  mover.py  scanMover.py
catkin_ws/src/octomap_create/: CMakeLists.txt  package.xml
catkin_ws/src/octomap_create/src/: roscpp_pcl.cpp
catkin_ws/src/pcdCreate/: CMakeLists.txt  package.xml
catkin_ws/src/pcdCreate/src/: failed.cpp  pcdCreator.cpp
catkin_ws/src/pclTransform/: CMakeLists.txt  package.xml
catkin_ws/src/pclTransform/launch/: cloudTransform.launch
catkin_ws/src/pclTransform/src/: cloud_transformer.cpp
ur5_ws/src/mover/src/: scanMove.py
ur5_ws/src/python_code_for_calibration/src/: CMakeLists.txt
ur5_ws/src/python_code_for_calibration/src/auto_calibrate/: CMakeLists.txt  package.xml
ur5_ws/src/python_code_for_calibration/src/auto_calibrate/src/: getCalibrationPositions.py
ur5_ws/src/relaxed_ik_ros1/: CMakeLists.txt  README.md
